# talk

./: .gitignore  CMakeLists.txt  README.md  echo_bot.cpp  main.cpp
lib/include/: Command.h  CursesIO.h  Friend.h  Message.h  Request.h  Session.h  TUI.h  Utility.h
lib/src/: Friend.cpp  Request.cpp  Session.cpp
